vibecrafted-app/tui-agent/src/snapshots/voc__ui__tests__zen_home_empty.snap
---
source: tui-agent/src/ui.rs
expression: snapshot_without_terminal_padding(&rendered)
---
Voc ZEN  [Global]  Live · 0 runs
live 0  attention 0  failed 0  · attention working rule on
┌ Live · date ↓ · h History ───────────────────────────────────────────────────┐
│Live                                                                          │
│  —                                                                           │
│Needs attention · working rule                                                │
│  —                                                                           │
│Failed · last 24h                                                             │
│  —                                                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑/↓ select · Enter observe · g goto · h history · x archive · f scope · Tab pane
state root: /tmp/state
› /query  !observe <run>  !goto <run>  !resume <run>  █
